--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TypeScript",
+  "name": "typescript",
   "version": "1.0.0",
   "description": "A superset of JavaScript 😎, JavaScript with Types and much more",
   "main": "app.js",
